# space-analysis.py

./: .envrc  .gitignore  .nojekyll  .pre-commit-config.yaml  00_core.html  00_meta.html  README.md  core.html  environment.yml  index.html  index.ipynb  justfile  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml
.github/workflows/: deploy.yaml  test.yaml
data/: obs_groups_and_instrs.json
data/missions/: juno.yml  psp.yml  solo.yml  stereo.yml  themis.yml  wind.yml
data_structure/: 00_config.html  00_meta.html  01_tplot.html
data_structure/speasy/: 01_io.html  02_plot.html  10_utils.html
data_structure/timeseries/: 10_utils.html  io.html  plot.html  timeseries.html
data_structure/tplot/: 01_tplot.html  02_plot.html  03_trans.html  10_utils.html
examples/: 01_cdas.html  10_mission_info.html
files/: quarto.just
io/: 30_cdf.html  31_lbl.html  index.html
missions/: 2015_dscovr.html  2018_psp.html  index.html
missions/juno/: fgm.html  index.html
missions/psp/: index.html  mag.html
missions/stereo/: index.html
missions/themis/: index.html
missions/wind/: index.html  mag.html  plasma.html
nbs/: 00_core.ipynb  _quarto.yml  index.ipynb  index.qmd  nbdev.yml  sidebar.yml
nbs/data_structure/: 00_config.ipynb  00_meta.ipynb  01_tplot.ipynb
nbs/data_structure/speasy/: 01_io.ipynb  02_plot.ipynb  10_utils.ipynb
nbs/data_structure/timeseries/: 10_utils.ipynb  io.ipynb  plot.ipynb  timeseries.ipynb
nbs/data_structure/tplot/: 01_tplot.ipynb  02_plot.ipynb  03_trans.ipynb  10_utils.ipynb
nbs/examples/: 01_cdas.ipynb  01_cdas_dash.qmd  10_mission_info.ipynb  obs_groups_and_instrs.yaml
nbs/examples/.jupyter_cache/: global.db
nbs/io/: 30_cdf.ipynb  31_lbl.ipynb  _31_lbl.ipynb  index.qmd
nbs/missions/: 2015_dscovr.ipynb  2018_psp.ipynb  index.qmd
nbs/missions/juno/: _fgm.ipynb  _mag.ipynb  fgm.ipynb  index.ipynb
nbs/missions/psp/: index.ipynb  index.qmd  mag.ipynb
nbs/missions/solo/: index.ipynb
nbs/missions/stereo/: index.ipynb
nbs/missions/themis/: index.ipynb
nbs/missions/wind/: index.ipynb  index.qmd  mag.ipynb  plasma.ipynb
nbs/plasma/: 00_ formulary.ipynb  00_formulary.ipynb  00_formulary_numpy.ipynb  00_formulary_polars.ipynb  00_formulary_tplot.ipynb  01_mhd_waves.ipynb  helioweb.ipynb
nbs/plot/: 01_matplotlib.ipynb  01_plt_config.ipynb
nbs/simulation/: warpx.ipynb
nbs/utils/: 00_basic.ipynb  00_develop.ipynb  00_math.ipynb  19_speasy.ipynb  20_pds.ipynb  21_cdas.ipynb
plasma/: 00_ formulary.html  00_formulary.html  00_formulary_numpy.html  00_formulary_polars.html  00_formulary_tplot.html  01_mhd_waves.html  helioweb.html
plot/: 01_matplotlib.html  01_plt_config.html
simulation/: warpx.html
space_analysis/: __init__.py  _modidx.py  core.py  meta.py
space_analysis/ds/: config.py  meta.py  tplot.py
space_analysis/ds/spz/: io.py  plot.py  utils.py
space_analysis/ds/tplot/: __init__.py  formulary.py  plot.py  trans.py  utils.py
space_analysis/ds/ts/: __init__.py  io.py  plot.py  utils.py
space_analysis/io/: cdf.py
space_analysis/missions/: psp.py
space_analysis/missions/dscovr/: __init__.py  mag.py
space_analysis/missions/juno/: __init__.py  fgm.py
space_analysis/missions/psp/: __init__.py  mag.py
space_analysis/missions/solo/: __init__.py
space_analysis/missions/stereo/: __init__.py
space_analysis/missions/themis/: __init__.py
space_analysis/missions/wind/: __init__.py  mag.py  plasma.py
space_analysis/pipelines/juno/: mag.py
space_analysis/plasma/: formulary.py  mhd_waves.py
space_analysis/plasma/formulary/: numpy.py  polars.py
space_analysis/plot/: basic.py  config.py
space_analysis/simulation/: warpx.py
space_analysis/utils/: basic.py  cdas.py  lbl.py  math.py  mission.py  pds.py  speasy.py
src/: pyproject.toml
src/space_analysis/: _modidx.py  core.py  meta.py
src/space_analysis/ds/: config.py
src/space_analysis/io/: cdf.py
src/space_analysis/missions/: psp.py
src/space_analysis/plasma/: mhd_waves.py
src/space_analysis/plot/: basic.py
src/space_analysis/utils/: basic.py  (+6 more)
utils/: 00_basic.html  00_develop.html  00_math.html  19_speasy.html  20_pds.html  21_cdas.html
(+24 files in other folders)
