[project]
name = "space-analysis"
dynamic = ["version"]
description = "Python library for data analysis in space physics"
authors = [{ name = "Beforerr", email = "zzj956959688@gmail.com" }]
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    "beforerr",
    "pydantic",
    "plum-dispatch",
    "polars",
    "plasmapy",
    "astropy",
    "loguru",
    "rich",
    "humanize",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.optional-dependencies]
plot = ["hvplot"]
io = [
    "pyspedas",
    "speasy",
    "pycdfpp",
    "cdasws",
    "pdr",      # [P]lanetary [D]ata [R]eader - A single function to read all Planetary Data System (PDS) data into Python
    "pooch"
]
# sim = ["warpx"]

[project.urls]
Homepage = "https://beforerr.github.io/space-analysis.py"
Repository = "https://github.com/beforerr/space-analysis.py"

[tool.pdm.version]
source = "scm"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.environments]
default = ["io", "plot"]

[tool.pixi.dependencies]
ipykernel = "*"
numba = "*" # https://github.com/PlasmaPy/PlasmaPy/pull/2841 PlasmaPy issue
netcdf4 = "*" # used in `pyspedas`

[tool.pixi.pypi-dependencies]
space_analysis = { path = ".", editable = true }
nbdev = "*"
jupyter-cache = "*"
itables = "*"
great_tables = "*"
pipe = "*"