[project]
name = "space-analysis"
dynamic = ["version"]
description = "Python library for data analysis in space physics"
authors = [{ name = "Beforerr", email = "zzj956959688@gmail.com" }]
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    "beforerr",
    "pydantic",
    "plum-dispatch",
    "polars",
    "plasmapy",
    "astropy",
    "loguru",
    "rich",
    "humanize",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.optional-dependencies]
plot = ["hvplot"]
io = [
    "pyspedas",
    "speasy",
    "pycdfpp",
    "cdasws",
    "pdr",      # [P]lanetary [D]ata [R]eader - A single function to read all Planetary Data System (PDS) data into Python
    "pooch",
]
dev = ["ipykernel", "nbdev", "jupyter-cache"]
doc = ["itables", "great_tables"]

[project.urls]
Homepage = "https://beforerr.github.io/space-analysis.py"
Repository = "https://github.com/beforerr/space-analysis.py"

[tool.pdm.version]
source = "scm"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.environments]
default = ["dev", "io", "plot", "doc"]

[tool.pixi.dependencies]
netcdf4 = "*" # used in `pyspedas`
warpx = "*"

[tool.pixi.pypi-dependencies]
space_analysis = { path = ".", editable = true }
pipe = "*"
